<resources>
    <string name="app_name">Wordy</string>
    <string name="app_name_label">Wordy</string>
    <string name="submit">Submit</string>
    <string name="restart">Restart</string>
    <string name="clear">Clear</string>
    <string name="add_word">Add Word</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="word_label">Word:</string>
    <string name="clear_database">Clear Database</string>
    <string name="play">Play</string>
    <string name="view_database">View Database</string>
</resources>